Revision history for File-Map

{{$NEXT}}

0.41      2012-01-14 13:14:23 Europe/Amsterdam
          Fixed bug on Windows when using offsets

0.40      2011-10-24 20:41:19 Europe/Amsterdam
          Made STDOUT test more portable
          Remove all mentioning of VMS

0.39      2011-10-17 21:57:47 Europe/Amsterdam 
          Converted module to Dist::Zilla
          Fixed various issues in unit tests

0.38    2011-08-21
        Taint memory maps when tainting mode is on (fixes RT#68787)
        Explicitly test error messages in "C" locale
        Give better errors on mapping zero length nonfiles
        Handle SV-flags more intelligently

0.37    2011-05-02
        Fixed permission in remap test
        Silenced warnings on modern Test::More's

0.36    2011-01-26
        Fixed tests on Windows and on perl < 5.8.7

0.35    2011-01-16
        Added proper support for PerlIO layers, in order to:
         * reliably detect crlf transformations
         * detect and handle utf8 layers
        Use sterror instead of strerror_r when the latter isn't available

0.34    2010-12-04
        Skip remap tests as soon as possible, to avoid failures on non-Linux
        Fixed anonymous mapping on Windows
        Fixed warning on perl < 5.8.8

0.33    2010-12-01
        Made remap actually useful (will now try to move the map if necesary)
        Added tests for remap
        Made code C89 compliant again
        Fixed minor issues with strerror_r
        Added Test::NoWarnings to tests

0.32    2010-11-09
        Skip localization test when localization is not availible
        Reject scalar string handles

0.31    2010-09-20
        Only add MGf_local to mg_flags if MGf_local is defined (5.8.9 and up)
        Fix memory leak in empty maps (found by Test::Valgrind)

0.30    2010-09-13
        Fixed regression in mmap_info allocation on Win32 introduced by 0.28
        Replaced Readonly by Const::Fast
        Replaced Exporter by Sub::Exporter